--- a/website/src/scss/main.css
+++ b/website/src/scss/main.css
@@ -1742,10 +1742,8 @@ html {
 
 .search-filter__label {
   font-size: 12px;
-  font-weight: bolder;
   display: none;
-  font-family: "Helvetica Neue";
-  padding: 0.9rem 0rem 0.9rem 0.751rem;
+  padding: 0.9rem 0rem 17px 0.75rem;
   background-color: #eaecf3; }
   @media (min-width: 481px) {
     .search-filter__label {
@@ -1780,12 +1778,12 @@ html {
     margin: auto; }
 
 .search-filter__text {
-  padding: .9rem 1.2rem .9rem .2rem;
+  padding: .9rem 1.2rem 17px .2rem;
   cursor: pointer;
   border-bottom: none; }
   @media (max-width: 480px) {
     .search-filter__text {
-      padding: .9rem 1.2rem .9rem .5rem; } }
+      margin-left: .5rem; } }
   .search-filter__text i {
     position: absolute; }
 
@@ -1873,7 +1871,7 @@ html {
   border-bottom: 1px solid #D8D8D8; }
 
 .search-results__breadcrumbs {
-  margin: 0.5rem 0 0.5rem 0.5rem;
+  margin: 0.4rem 0 0.4rem 0.5rem;
   align-self: center; }
   .search-results__breadcrumbs li {
     display: inline; }
@@ -1891,7 +1889,7 @@ html {
     color: #588bce; }
 
 .search-results__number {
-  padding-right: .75rem;
+  margin-right: .75rem;
   display: none; }
   @media (min-width: 961px) {
     .search-results__number {
